--- a/css/style.css
+++ b/css/style.css
@@ -1613,3 +1613,126 @@ input[type="radio"].visually-hidden {
 .modal-cart-button:last-child {
   margin-right: 0;
 }
+
+/* ========== Модальное окно формы ========== */
+
+.modal-mail {
+  top: 200px;
+  left: 50%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 620px;
+  min-height: 430px;
+  margin-left: -310px;
+
+  border-top: 7px solid #ee3643;
+  box-shadow: 0 20px 40px 0 rgba(41, 52, 73, 0.75);
+}
+
+.form-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 55px;
+  margin-right: 80px;
+  margin-right: -20px;
+  margin-bottom: 37px;
+  margin-left: 80px;
+}
+
+.mail-form {
+  margin: 0;
+}
+
+.mail-form label {
+  font-size: 18px;
+  line-height: 18px;
+  color: #000000;
+}
+
+.mail-form input[type="text"] {
+  width: 200px;
+  min-height: 34px;
+  margin-top: 13px;
+  margin-right: 20px;
+  margin-bottom: 22px;
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-left: 16px;
+
+  font-size: 13px;
+  line-height: 18px;
+  font-family: "PT Sans", Arial, sans-serif;
+  color: #a9a9a9;
+
+  border: 2px solid #dee3e4;
+}
+
+.mail-text {
+  margin: 0;
+}
+
+.mail-text label {
+  font-size: 18px;
+  line-height: 18px;
+  color: #000000;
+}
+
+.mail-text textarea {
+  width: 424px;
+  height: 74px;
+  margin-top: 13px;
+  padding: 13px 16px;
+
+  font-size: 13px;
+  line-height: 18px;
+  font-family: "PT Sans", Arial, sans-serif;
+  color: #a9a9a9;
+
+  border: 2px solid #dee3e4;
+}
+
+.button-mail {
+  display: block;
+  width: 460px;
+  margin-right: 20px;
+  padding: 10px 0;
+
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+
+  background-color: #ee3643;
+  border: none;
+  border-radius: 3px;
+}
+
+.button-mail:hover,
+.button-mail:focus {
+  background-color: #ca2c37;
+}
+
+.button-mail:active {
+  color: #000000;
+
+  background-color: #ffffff;
+}
+
+.button-mail:last-child {
+  margin-right: 0;
+}
+
+.button-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 37px;
+  padding-right: 80px;
+  padding-bottom: 37px;
+  padding-left: 80px;
+
+  background-color: #f4f4f4;
+}
