--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,10 @@ ul {
   list-style: none;
 }
 
-img {
+/* img {
   max-width: 100%;
   height: auto;
-}
+} */
 
 .container {
   width: 940px;
@@ -317,7 +317,7 @@ input[type="radio"].visually-hidden {
 
 .user-login {
   display: flex;
-  justify-content: space-between;
+  margin: 0;
   padding: 0;
 
   font-size: 21px;
@@ -325,6 +325,7 @@ input[type="radio"].visually-hidden {
 }
 
 .user-login a {
+  display: block;
   padding-top: 14px;
   padding-right: 25px;
   padding-bottom: 15px;
@@ -1057,6 +1058,42 @@ input[type="radio"].visually-hidden {
   color: #000000;
 }
 
+/* ========== СЛАЙДЕР СЕРВИСОВ ========== */
+
+.services-container {
+  position: relative;
+
+  min-width: 940px;
+  /* Для демонстрации */
+  min-height: 100vh;
+  margin: 0 auto;
+  padding: 0 20px;
+
+  color: #000000;
+
+  background-color: #f4f7f9;
+  background-image: url("../img/delivery.jpg");
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
+
+.slider-service-list {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.slide-service-title {
+  margin: 0;
+
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 36px;
+  color: #32425c;
+}
+
+
 /* ========== КОМПАНИЯ и КОНТАКТЫ ========== */
 
 .company-and-contacts {
@@ -1227,9 +1264,10 @@ input[type="radio"].visually-hidden {
   display: block;
 }
 
-.catalog-item .image {
-  width: auto;
-  height: auto;
+.catalog-item .catalog-item-image {
+  width: 218;
+  height: 168;
+  margin: 0;
 }
 
 .catalog-item .title {
@@ -1523,6 +1561,7 @@ input[type="radio"].visually-hidden {
 
 .modal {
   position: fixed;
+  z-index: 3;
 
   color: #000000;
 
@@ -1775,4 +1814,16 @@ input[type="radio"].visually-hidden {
 
 iframe {
   border: none;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+  width: 100%;
+  height: 100%;
+
+  background: rgba(255, 255, 255, 0.1);
 }
