--- a/css/style.css
+++ b/css/style.css
@@ -886,6 +886,109 @@ input[type="radio"].visually-hidden {
 
 /* СЛАЙДОР сервисов */
 
+.slide1 {
+  background-image: url("../img/delivery.png");
+  background-repeat: no-repeat;
+  background-position: top right;
+}
+
+.slide2 {
+  background-image: url("../img/warranty.png");
+  background-repeat: no-repeat;
+  background-position: top right;
+}
+
+.slide3 {
+  background-image: url("../img/credit.png");
+  background-repeat: no-repeat;
+  background-position: top right;
+}
+
+.delivery-and-services {
+  background-color: #f4f7f9;
+}
+
+.slider-DS {
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 102px;
+}
+
+.slider-list-DS {
+  margin: 0;
+  padding: 0;
+  padding-left: 80px;
+
+  list-style: 0;
+}
+
+.services-description {
+  width: 275px;
+  min-height: 183px;
+}
+
+.slider-service-item {
+  width: 700px;
+}
+
+.slider-service-item h3 {
+  margin: 0;
+
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 36px;
+  color: #32425c;
+}
+
+.slider-service-item p {
+  font-size: 13px;
+  line-height: 24px;
+  color: #000000;
+}
+
+.slider-controls-DS label {
+  display: block;
+  min-width: 220px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 20px;
+
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 30px;
+  text-align: left;
+  color: #ffffff;
+
+  background-color: #32425c;
+  border-bottom: 1px solid #ffffff;
+  box-shadow: inset 0 -1px 0 0 #33445a;
+}
+
+.button-mail-DS {
+  z-index: 10;
+
+  padding: 10px 44px;
+
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+
+  background-color: #ee3643;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.button-mail-DS:hover,
+.button-mail-DS:focus {
+  background-color: #ca2c37;
+}
+
+.button-mail-DS:active {
+  background-color: #ba2732;
+}
 
 
 /* ========== ХИДЕР БЛОКА ========== */
