--- a/css/style.css
+++ b/css/style.css
@@ -884,110 +884,92 @@ input[type="radio"].visually-hidden {
   background-color: #ba2732;
 }
 
-/* СЛАЙДОР сервисов */
+/* табослайдыр */
 
-.slide1 {
-  background-image: url("../img/delivery.png");
-  background-repeat: no-repeat;
-  background-position: top right;
+div.tab-frame {
+  position: relative;
+
+  min-height: 183px;
 }
 
-.slide2 {
-  background-image: url("../img/warranty.png");
-  background-repeat: no-repeat;
-  background-position: top right;
+div.tab-frame input {
+  display: none;
+}
+div.tab-frame label {
+  position: absolute;
+
+  display: block;
+  min-width: 194px;
+  padding: 15px 23px;
+
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 30px;
+
+  background-color: #32425c;
+  border-top: 1px solid #4d637b;
+  cursor: pointer;
 }
 
-.slide3 {
-  background-image: url("../img/credit.png");
-  background-repeat: no-repeat;
-  background-position: top right;
+div.tab-frame input:checked + label {
+  color: #32425c;
+
+  background-color: #ffffff;
+  border-top: 1px solid #ffffff;
+  cursor: default;
 }
 
-.delivery-and-services {
-  background-color: #f4f7f9;
+.tab-frame label:nth-child(2) {
+  top: 0;
 }
 
-.slider-DS {
-  display: flex;
-  flex-direction: row;
-  padding-bottom: 102px;
+.tab-frame label:nth-child(4) {
+  top: 61px;
 }
 
-.slider-list-DS {
+.tab-frame label:nth-child(6) {
+  top: 122px;
+}
+
+div.tab-frame div.tab {
+  display: none;
+  padding: 5px 10px;
+}
+
+div.tab-frame input:nth-of-type(1):checked ~ .tab:nth-of-type(1),
+div.tab-frame input:nth-of-type(2):checked ~ .tab:nth-of-type(2),
+div.tab-frame input:nth-of-type(3):checked ~ .tab:nth-of-type(3) {
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  display: block;
+  width: 700px;
+  min-height: 183px;
+  margin: 0;
+  padding: 0;
+
+  background-color: blueviolet;
+}
+
+.tab-frame h3 {
   margin: 0;
   padding: 0;
   padding-left: 80px;
 
-  list-style: 0;
-}
-
-.services-description {
-  width: 275px;
-  min-height: 183px;
-}
-
-.slider-service-item {
-  width: 700px;
-}
-
-.slider-service-item h3 {
-  margin: 0;
-
-  font-weight: normal;
   font-size: 36px;
   line-height: 36px;
   color: #32425c;
 }
 
-.slider-service-item p {
+.tab-frame p {
+  margin: 0;
+  padding: 0;
+  padding-left: 80px;
+
   font-size: 13px;
   line-height: 24px;
   color: #000000;
-}
-
-.slider-controls-DS label {
-  display: block;
-  min-width: 220px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 20px;
-
-  font-weight: bold;
-  font-size: 21px;
-  line-height: 30px;
-  text-align: left;
-  color: #ffffff;
-
-  background-color: #32425c;
-  border-bottom: 1px solid #ffffff;
-  box-shadow: inset 0 -1px 0 0 #33445a;
-}
-
-.button-mail-DS {
-  z-index: 10;
-
-  padding: 10px 44px;
-
-  font-size: 14px;
-  line-height: 18px;
-  text-align: center;
-  color: #ffffff;
-  text-transform: uppercase;
-
-  background-color: #ee3643;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-.button-mail-DS:hover,
-.button-mail-DS:focus {
-  background-color: #ca2c37;
-}
-
-.button-mail-DS:active {
-  background-color: #ba2732;
 }
 
 
