--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,7 @@ input[type="radio"].visually-hidden {
 .heading {
   width: 196px;
   margin: 0;
-  margin-right: 70px;
+  margin-right: 60px;
   padding-left: 51px;
 
   font-size: 16px;
@@ -320,7 +320,7 @@ input[type="radio"].visually-hidden {
 .header-contacts {
   display: flex;
   flex-direction: column;
-  margin-right: 69px;
+  margin-right: 60px;
 
   font-family: "Cuprum", Arial, sans-serif;
 }
@@ -435,11 +435,106 @@ input[type="radio"].visually-hidden {
 .user-menu-exit {
   display: flex;
   justify-content: space-between;
+  margin: 0;
+  padding: 0;
+}
+
+.user-menu-exit a {
+  position: relative;
+
+  display: block;
+  padding-top: 14px;
+  padding-right: 69px;
+  padding-bottom: 15px;
+  padding-left: 47px;
+
+  font-size: 21px;
+  line-height: 21px;
+  color: #000000;
+
+  background-color: #ffffff;
+}
+
+.user-menu-exit a:hover {
+  color: #ee3643;
+}
+
+.user-menu-exit a:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.user-menu-exit a::before {
+  content: "";
+  position: absolute;
+  top: 14px;
+  left: 13px;
+
+  width: 20px;
+  height: 18px;
+
+  background-image: url("../img/sprites/icon-user.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.user-menu-exit a:hover::before {
+  background-image: url("../img/sprites/icon-user-hover.svg");
+}
+
+.user-menu-exit a:active::before {
+  background-image: url("../img/sprites/icon-user.svg");
+}
+
+.user-menu-exit a::after {
+  content: "";
+  position: absolute;
+  top: 15px;
+  right: 10px;
+
+  width: 20px;
+  height: 17px;
+
+  background-image: url("../img/sprites/icon-logout.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.user-menu-exit a:hover::after {
+  background-image: url("../img/sprites/icon-logout-hover.svg");
+}
+
+.user-menu-exit a:active::after {
+  background-image: url("../img/sprites/icon-logout.svg");
 }
 
 .user-menu {
+  position: relative;
+
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  margin: 0;
+  padding: 0;
+}
+
+.user-menu li:nth-child(2n)::before {
+  content: "";
+  position: absolute;
+  top: 16px;
+  left: 103px;
+
+  width: 4px;
+  height: 4px;
+
+  background-color: #32425c;
+  border-radius: 50%;
+}
+
+.user-menu a {
+  display: block;
+  padding: 10px 15px;
+
+  color: #32425c;
+  text-decoration: underline;
 }
 
 .user-menu-exit {
@@ -475,6 +570,8 @@ input[type="radio"].visually-hidden {
 /* ========== ХЛЕБНЫЕ КРОШКИ ========== */
 
 .breadcrumbs-catalog {
+  display: flex;
+  justify-content: flex-start;
   margin: 0;
   padding: 0;
 
