--- a/css/style.css
+++ b/css/style.css
@@ -1516,7 +1516,6 @@ div.contacts {
 
 .range-filter {
   width: 220px;
-  margin-top: 20px;
 }
 
 .container-filters fieldset {
@@ -2228,17 +2227,109 @@ figure {
   border: 1px solid #ee3643;
 }
 
+.description {
+  width: 100%;
+  padding-top: 65px;
+  padding-bottom: 70px;
+
+  color: #000000;
+
+  background-color: #f4f7f9;
+}
+
+.description h2 {
+  margin: 0;
+  margin-bottom: 30px;
+
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+.description p {
+  margin: 0;
+
+  font-size: 13px;
+  line-height: 24px;
+  font-family: "PT Sans", Arial, sans-serif;
+}
+
 /* ========== СОРТИРОВКА ========== */
 
-.sort {
+.filter-h2 {
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 13px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 18px;
+
+  font-weight: normal;
   font-size: 13px;
   line-height: 18px;
   font-family: "PT Sans", Arial, sans-serif;
   text-transform: uppercase;
+
+  background-color: #f7f3ec;
+}
+
+.sort {
+  display: flex;
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 18px;
+
+  font-size: 13px;
+  line-height: 18px;
+  font-family: "PT Sans", Arial, sans-serif;
+  text-transform: uppercase;
+
+  background-color: #f7f3ec;
+}
+
+.sort-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 .sort h2 {
+  margin: 0;
+  padding-right: 140px;
+
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 18px;
+  font-family: "PT Sans", Arial, sans-serif;
   color: #000000;
+  text-transform: uppercase;
+}
+
+.sort-list .by-price {
+  padding-right: 60px;
+
+  color: #ee3643;
+}
+
+.sort-list .type {
+  padding-right: 60px;
+}
+
+.sort-list .by-functionality {
+  padding-right: 60px;
+}
+
+.sort-list .up {
+  padding-right: 20px;
+
+  fill: #ee3643;
+}
+
+.sort-list .down {
+  padding-right: 20px;
 }
 
 .sort a {
